@@ -596,12 +596,14 @@ $result_converted{'plaintext'}->{'raw_in_example'} = '
 
 
 $result_converted{'html_text'}->{'raw_in_example'} = '<div class="example">
-<pre class="example">in html</pre></div>
+<pre class="example">in html
+</pre></div>
 
 <div class="example">
 <pre class="example">
 
 Some html <code>some code</code>.
+
 
 
 </pre></div>
